--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oj-event",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "homepage": "https://www.orange-juice.nl",
   "repository": {
     "type": "git",
@@ -20,6 +20,5 @@
     "share": "npm upgrade && npm version patch -force && npm run build && npm publish --registry https://registry.npmjs.org"
   },
   "author": "Marius Linders @ Orange Juice<marius.linders@orange-juice.nl>",
-  "license": "MIT",
-  "dependencies": {}
+  "license": "MIT"
 }
